# Books

./: .gitignore
angular-for-enterprise-applications-third-edition/local-weather-app/: README.md  angular.json  package-lock.json  package.json
grokking-algorithms-second-edition/chapter-four-quicksort/python/: pyproject.toml
grokking-algorithms-second-edition/chapter-four-quicksort/python/src/: count_number_items.py  earlier_sum.py  find_the_maximum_number.py  quicksort.py  recursive_binary_search.py
grokking-algorithms-second-edition/chapter-four-quicksort/python/tests/: test_count_number_items.py  test_earlier_sum.py  test_find_the_maximum_number.py  test_quicksort.py  test_recursive_binary_search.py
grokking-algorithms-second-edition/chapter-one-introduction-to-algorithms/python/: binary_search.py  pyproject.toml  test_binary_search.py
grokking-algorithms-second-edition/chapter-seven-trees/file-directories-python/: file_directory_breadth_first_search.py  file_directory_depth_first_search.py  pyproject.toml  test_file_directory_depth_first_search.py
learning-typescript-enhance-your-web-development-skills-using-type-safe-javascript/chapter-one-from-javascript-to-typescript/: package-lock.json  package.json  user.js  user.ts
python-crash-course-third-edition/chapter-eight-functions/: build_profile.py  describe_pet.py  formatted_name.py  greet_user.py  make_pizza.py  make_shirt.py  printing_models.py
python-crash-course-third-edition/chapter-eleven-testing-your-code/: divider.py  full_name.py  name_formatter.py  profile.py  pyproject.toml  test_divider.py  test_employee.py  test_full_name.py  test_name_formatter.py  test_profile.py
python-crash-course-third-edition/chapter-five-if-statements/: admin_users.py  age_verifier.py  available_usernames.py  car_check.py  empty_users.py  score_grades.py  top_scores.py
python-crash-course-third-edition/chapter-four-working-with-lists/: buffet.py  copy_lists.py  counting.py  indentation_practice.py  names_loop.py  players_slice.py  recent_players.py  styled_loop.py
python-crash-course-third-edition/chapter-fourteen-scoring/alien-invasion/: alien_invasion.py  game_stats.py  pyproject.toml  scoreboard.py  settings.py
(+312 files in other folders)
