[project]
name = "chapter-one-introduction-to-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Martinez",email = "cristianandres92@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false