[project]
name = "file-directories-python"
version = "0.1.0"
description = "prints the name of every file in the pics directory, including all its subdirectories"
authors = [
    {name = "Cristian Martinez",email = "cristianandres92@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
